--- a/angular.json
+++ b/angular.json
@@ -34,6 +34,7 @@
             ],
             "styles": [
               "node_modules/bootswatch/dist/simplex/bootstrap.min.css",
+              "node_modules/mapbox-gl/dist/mapbox-gl.css",
               "node_modules/ngx-toastr/toastr.css",
               "src/styles.scss"
             ],
@@ -96,6 +97,7 @@
             ],
             "styles": [
               "node_modules/bootswatch/dist/simplex/bootstrap.min.css",
+              "node_modules/mapbox-gl/dist/mapbox-gl.css",
               "node_modules/ngx-toastr/toastr.css",
               "src/styles.scss"
             ],
