--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "^19.2.0",
     "bootstrap": "^5.3.6",
     "bootswatch": "^5.3.6",
+    "mapbox-gl": "^3.13.0",
     "ngx-toastr": "^19.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
