calendar backend logic finally works and saves data

--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "@fullcalendar/angular": "^6.1.17",
     "@fullcalendar/daygrid": "^6.1.17",
     "@fullcalendar/interaction": "^6.1.17",
-    "bootstrap": "^5.3.6",
+    "@popperjs/core": "^2.11.8",
+    "bootstrap": "^5.3.7",
     "bootswatch": "^5.3.6",
     "mapbox-gl": "^3.13.0",
     "ngx-toastr": "^19.0.0",
