--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@angular/common": "^19.2.0",
     "@angular/compiler": "^19.2.0",
     "@angular/core": "^19.2.0",
+    "@angular/fire": "^20.0.1",
     "@angular/forms": "^19.2.0",
     "@angular/platform-browser": "^19.2.0",
     "@angular/platform-browser-dynamic": "^19.2.0",
@@ -28,6 +29,7 @@
     "bootstrap": "^5.3.7",
     "bootswatch": "^5.3.6",
     "chart.js": "^4.5.0",
+    "firebase": "^11.9.1",
     "mapbox-gl": "^3.13.0",
     "ngx-toastr": "^19.0.0",
     "rxjs": "~7.8.0",
